# TonDevWallet

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CHANGELOG.md  README.md  components.json  css-data.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.changeset/: brave-relays-emulate.md  bright-areas-travel.md  empty-islands-read.md  four-taxis-invent.md  pre.json  slick-adults-say.md  soft-eels-lick.md  tasty-feet-occur.md  tiny-ravens-send.md  witty-moons-shake.md
.github/workflows/: artifact.yml  extension.yml  main.yml  no-seed-check.yml  pages.yml  release.yml  tauri.yml  test.yml
.storybook/: main.ts  preview.css  preview.tsx
.storybook/mocks/: db.tsx  eventListener.ts
browser-extension/: package.json  pnpm-lock.yaml  vite.config.ts
browser-extension/src/: background.ts  inject.ts  manifest.json  popup.tsx
patches/: @ton__core@0.60.0.patch  @ton__sandbox.patch
scripts/: storybook-atlas.ts
src/: api.ts  app.tsx  db.test.tsx  db.tsx  eventListener.ts  fs.ts  index.css  index.scss  liteClient.ts  main.tsx  networkConfig.ts  preact.d.ts  router.tsx  updater.tsx  util.ts  utils.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/fixtures/: tvm-emulate-request.json
src-tauri/icons/: icon.icns
src-tauri/src/: adnl_common.rs  adnl_ws.rs  adnl_ws_stream.rs  colors.rs  db_client.rs  lib.rs  main.rs  migration_commands.rs  proxy.rs  register_uri.rs  test_subscribers.rs  ton_echo.rs  tvm_runner.rs
src-tauri/src/devwallet/: mod.rs  ok.rs  rpc.rs
src-tauri/src/migrations/: mod.rs  runner.rs
src-tauri/src/migrations/migrations/: m001_create_keys.rs  m002_create_wallets.rs  m003_create_tonconnect.rs  m004_create_connect_messages.rs  m005_add_session_manifest.rs  m006_add_settings.rs  m007_add_last_selected_wallets.rs  m008_add_session_auto_send.rs  m009_add_network_settings.rs  m010_remove_message_session_foreign.rs  m011_add_wallet_address.rs  m012_add_connect_sessions_autoincrement.rs  m013_add_keys_autoincrement.rs  m014_add_networks_autoincrement.rs  m015_add_wallets_autoincrement.rs  m016_fix_connect_sessions_foreign_keys.rs  m017_fix_last_selected_wallets_foreign_keys.rs  m018_change_subwallet_id_type.rs  m019_add_wallet_extra_data.rs  m020_add_wallet_name.rs  m021_add_wallet_workchain_id.rs  m022_add_message_cell.rs  m023_create_address_book.rs  m024_add_message_mode.rs  m025_add_message_type.rs  m026_add_sign_payload.rs  m027_add_toncenter3_url.rs  m028_add_key_sign_type.rs  m029_add_lite_engine_host.rs  m030_add_plugin_address.rs  m031_add_plugins_to_remove.rs  m032_add_tonapi_network_settings.rs  m033_add_chain_id.rs  m034_add_blockchain_source.rs  m035_add_network_api_tokens.rs  mod.rs
src/components/: AddressRow.tsx  BocContainer.tsx  CancelNftSale.tsx  CreateMarketplace.tsx  CreateNftSale.tsx  GetNftInfo.tsx  GetSaleInfo.tsx  HomeLink.tsx  KeyJazzicon.tsx  Layout.tsx  Navigation.stories.tsx  NetworkSettings.tsx  Pages.stories.tsx  Popup.tsx  SendNft.tsx  SendTon.tsx  SendTonMarketplace.tsx  SetPasswordPage.tsx  TopBar.tsx  UI.tsx  WalletGenerator.tsx  WalletJazzicon.tsx  WalletsTable.tsx  copier.tsx  copy.tsx  useWallets.tsx  wallet.tsx
src/contracts/: HighloadWalletTypes.ts  HighloadWalletV2.ts  NftFixpriceSaleV2.data.ts  SignExternalMessage.ts  WalletContract.ts  WalletContract.tsx  WalletMarketpalce.ts  WalletMarketpalce.tsx  WalletMarketpalce.tsx_
src/hooks/: useAddressBook.ts  useAddressInfo.ts  useAppInfo.ts  useCell.ts  useEmulatedTxInfo.ts  useExtraCurrencies.ts  useFindActiveWallets.ts  useJettonInfo.ts  useKeyPair.ts  useKeyboardNavigation.readme.md  useKeyboardNavigation.ts  useMessagesHistory.ts  useOs.ts  useTheme.ts  useTonapiTxInfo.ts  useToncenterEmulation.ts  useTraceData.ts  useVmLogsNavigation.ts
src/migrations/: 10_remove_message_session_foreign.ts  11_add_wallet_address.ts  12_add_connect_sessions_autoincrement.ts  13_add_keys_autoincrement.ts  14_add_networks_autoincrement.ts  15_add_wallets_autoincrement.ts  16_fix_connect_sessions_foreign_keys.ts  17_fix_last_selected_wallets_foreign_keys.ts  18_change_subwallet_id_type.ts  19_add_wallet_extra_data.ts  1_create_keys.ts  20_add_wallet_name.ts  21_add_message_cell.ts  21_add_wallet_workchain_id.ts  23_create_address_book.ts  24_add_message_mode.ts  25_add_message_type.ts  26_add_sign_payload.ts  27_add_toncenter3_url.ts  28_add_key_sign_type.ts  29_add_lite_engine_host.ts  2_create_tonconnect.ts  2_create_wallets.ts  30_add_plugin_address.ts  30_add_walletkit_request.ts  31_add_plugins_to_remove.ts  3_create_tonconnect.ts  3_create_wallets.ts  4_create_connect_messages.ts  5_add_session_manifest.ts  6_add_settings.ts  7_add_last_selected_wallets.ts  8_add_session_auto_send.ts  9_add_network_settings.ts  index.ts
src/services/: walletKit.ts  walletKitAdapter.ts
src/store/: connectMessages.ts  liteClient.ts  liteClientPrimaryAdapter.ts  passwordManager.ts  primaryChainClient.ts  remoteTracerState.ts  searchState.ts  tauri.ts  tonClient.ts  tonConnect.ts  tonapiBlockchainAdapter.ts  toncenterBlockchainAdapter.ts  tracerState.ts  txInfo.ts  walletKitRequests.ts  walletState.ts  walletsListState.ts
src/tlb-runtime/: MathExprEvaluator.ts  Result.ts  TLBRuntime.ts  common.ts  index.ts  parser.ts  tesdata.ts
src/types/: Key.ts  TxRequest.ts  address.ts  connect.ts  index.ts  jetton.ts  network.ts  settings.ts  stack.ts
src/utils/: ExecutorWorker.ts  ExecutorWorkerWrapper.ts  HttpProviderUtils.ts  ManagedBlockchain.ts  ManagedExecutor.ts  RateLimitedHttpProvider.ts  address.ts  appExecutor.ts  base64.ts  callForSuccess.ts  delay.ts  detectW5Plugin.ts  ed25519.ts  emscripten.js  fileUpload.ts  fireblocks.ts  formatNumbers.ts  getMigrations.ts  graphDownloader.ts  jettonPayload.ts  jettons.ts  knexSqliteDialect.ts  liteClientBlockchainStorage.ts  liteClientProvider.ts  shards.ts  signer.ts  textToWalletBody.ts  ton.ts  tonConnect.ts  tonProof.ts  tonapiBlockchainStorage.ts  toncenterBlockchainStorage.ts  (+7 more)
wsproxy/: Cargo.toml
wsproxy/src/: main.rs
(+227 files in other folders)
