[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["devtools", "fs-create-dir", "fs-exists", "fs-remove-file", "http-all", "macos-private-api", "notification-all", "path-all", "shell-open", "updater", "window-minimize", "window-set-decorations", "window-set-focus", "window-start-dragging", "window-unminimize"] }
libsqlite3-sys = { version = "0.24.0", features = ["bundled-sqlcipher-vendored-openssl"] }
tokio = { version = "1.24.1", features = ["full"] }
futures-util = "0.3.25"
log = "0.4.17"
tokio-tungstenite = "0.18.0"
url = "2.3.1"
tungstenite = "0.18.0"
env_logger = "0.10.0"
sysinfo = "0.27.7"
window-vibrancy = "0.3.2"
base64 = "0.21.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/tauri-plugin-single-instance", rev = "74c698987b0bcc1472e0a9f0260ea089f38bc531" }
screenshots = "0.5.2"
tauri-plugin-deep-link = { git="https://github.com/FabianLars/tauri-plugin-deep-link", rev="644046bc08e1066d00fa9be60b46cc6de8f2a901" }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22.3"
objc = "0.2.7"
cocoa = "0.24.1"
cacao = { version = "0.3.2", features = ["appkit"] }
objc_id = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
windows = { version = "0.44.0", features = ["UI", "UI_ViewManagement"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
rev = "5379183f139625ca6c6660e2f17afa6f250066ef"
features = ["sqlite"] # or "postgres", or "mysql"
#branch = "main"

[profile.dev.package.screenshots]
opt-level = 3
debug = false
