[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "devtools", "macos-private-api"] }
libsqlite3-sys = { version = "0.28.0", features = [] }
tokio = { version = "1.24.1", features = ["full"] }
futures-util = "0.3.25"
log = "0.4.17"
tokio-tungstenite = "0.18.0"
url = "2.3.1"
tungstenite = "0.20.1"
env_logger = "0.10.0"
sysinfo = "0.27.7"
window-vibrancy = "0.3.2"
base64 = "0.21.0"
rxing = "0.4.7"
image = "0.24.6"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-cli = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22.3"
objc = "0.2.7"
cocoa = "0.24.1"
cacao = { version = "0.3.2", features = ["appkit"] }
objc_id = "0.1.1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10.1"
windows = { version = "0.44.0", features = ["UI", "UI_ViewManagement"] }

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
screenshots = "0.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"
# alternatively with Git
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[profile.dev.package.screenshots]
opt-level = 3
debug = false

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
