[package]
name = "wsproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "full"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3"
futures-channel = "0.3.5"
url = "*"
criterion = "0.4.0"
env_logger = "0.10.0"

